0031887: IntTools_Context::IsPointInFace always return TRUE

If aDist >= aTol, bIn is never updated to false, and the function
always returns TRUE.